Fix #16148: TreeView isn't collapsed after checking node. App container fix

--- a/src/app/components/TreeView/styles.scss
+++ b/src/app/components/TreeView/styles.scss
@@ -7,6 +7,7 @@ $tree-space-width: 28px;
 %cell {
   height: $table-cell-height;
   width: $tree-control-width;
+  min-width: $tree-control-width;
 }
 
 %showPseudo {
